src/components/layout/layout.scss
@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");

:root {
  background-color: var(--bg-colour);
}

// PHONE VIEW SMALL
@media (max-width: 600px) {
  .header {
    h1 {
      font-size: xx-large;
    }
  }

  .layout-container {
    width: 90vw;
  }
}

// PHONE VIEW LARGE
@media (max-width: 320px) {
  .header {
    h1 {
      font-size: large;
    }
  }

  .layout-container {
    width: 90vw;
  }
}

// WIDE VIEW
@media (min-width: 601px) {
  .layout-container {
    width: 65vw;
  }
}

.layout-wrapper {
  display: flex;
  justify-content: center;
  font-family: "Montserrat", sans-serif;
  color: var(--text-colour);
}

.header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  a {
    color: #a0a5ff;
  }
}

a {
  text-decoration: none;
}

main {
  background-color: var(--content-bg-colour);
  padding: 1.45em;
  border-radius: 1em;
  color: var(--text-colour);
}

footer {
  margin: 1rem 0rem 0rem;
  color: var(--text-colour);
}

body.light {
  --bg-colour: #dddddd;
  --text-colour: #1b1b1b;
  --content-bg-colour: #eeeeee;
  background-color: var(--bg-colour);
}

body.dark {
  --bg-colour: #1b1b1b;
  --text-colour: white;
  --content-bg-colour: #303030;
  background-color: var(--bg-colour);
}

body {
  transition: all 1s;
}

.toggle-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  font-size: 1em;
  width: 100%;
  height: 100%;
}

